--- a/apps/paws-and-redux/src/styles.css
+++ b/apps/paws-and-redux/src/styles.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  background-color: rgb(240, 240, 245);
+  font-size: 16px;
+}
+
+input::placeholder {
+  font-weight: 200;
+}
